# IDA-zeta

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: AssignType.cpp  AssignType.h  CommonHeaders.h  CreateSubObjectType.cpp  CreateSubObjectType.h  EditFunctionPro.cpp  EditFunctionPro.h  FixFrameSizeCalc.cpp  FixFrameSizeCalc.h  FixSetTypeCrash.cpp  FixSetTypeCrash.h  SetAllFuncsUserDefined.cpp  SetAllFuncsUserDefined.h  TypeNameParser.h  ida-zeta.cpp
